src/objects/Comms_Marketing_Service__c.object
<CustomObject>
    <description>OCM office requests (Visual Comms, EWM, Survey Services, External Communications, etc...) tracker.</description>
    <fields>
        <fullName>Actual_Date_Past_Agreed_Date_Hidden__c</fullName>
        <description>This is a hidden field that is used only for reporting purposes. The checkbox is selected when the Actual Due Date is later than the Agreed Due Date.</description>
        <formula>Actual_Delivery_Date__c &gt; Agreed_Due_Date__c</formula>
        <label>Actual Due Date past Agreed Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Delivery_Date__c</fullName>
        <label>Actual Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_Due_Date_Filled_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed Due Date Filled Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreed_Due_Date_Modification_Reason__c</fullName>
        <inlineHelpText>Why did the agreed upon due date change?</inlineHelpText>
        <label>Agreed Due Date-Modification Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Change in Priority</fullName>
                </value>
                <value>
                    <fullName>Change in Scope</fullName>
                </value>
                <value>
                    <fullName>Lack of Resources</fullName>
                </value>
                <value>
                    <fullName>Pending Client Approval</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreed_Due_Date__c</fullName>
        <inlineHelpText>Actual date agreed upon by the client and the task owner as the date the task will be completed.</inlineHelpText>
        <label>Agreed Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Agreed_Scope_of_Work__c</fullName>
        <label>Agreed Scope of Work</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Assignee_Access_Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assignee Access Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Training_Goals__c</fullName>
        <label>Brief Description of Training Goals</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Description_of_Your_Objectives__c</fullName>
        <label>Brief Description of Your Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Brief_Title__c</fullName>
        <inlineHelpText>(e.g., &quot;CASU Certificate,&quot; &quot;Jane Doe Retirement Poster,&quot; Add user to CMS, &quot;Region X City Chamber of Commerce Speech,&quot; &quot;Facebook post for Challenge.gov,&quot; etc.)</inlineHelpText>
        <label>Brief Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClickTools_Record_Type_Hidden__c</fullName>
        <description>This field is used in Customer Satisfaction Survey email template to pass the record type value to ClickTools.</description>
        <label>ClickTools Record Type Hidden</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <inlineHelpText>Complex - a task made up of complicated or interrelated parts or taking significant time or resources.
Moderate - average, neither too much nor too little time, cost, or resources.
Simple - routine, not hard to understand or do, complex or unusual.</inlineHelpText>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>Complex</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Convert_To_Project_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Convert To Project Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Convert_To_Project__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is checked when the Convert/Deconvert to a Project button is selected; it will mark the task as completed and create a project central record. You should only convert if you have multiple tasks or team members needed to complete your activity.</inlineHelpText>
        <label>Converted To Project</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_by_Team_Member__c</fullName>
        <inlineHelpText>Please select Yes if you are a Media Affairs or Public Engagement Team member who is creating this request.</inlineHelpText>
        <label>Created by Team Member</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Uses__c</fullName>
        <inlineHelpText>Outline how your office will use the data it collects from this survey.</inlineHelpText>
        <label>Data Uses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <inlineHelpText>Please expand on your request (e.g., who is your audience, what is your request about, what are your desired outcomes, any special instructions, etc.)</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Detailed_Overview_of_Survey_Recipients__c</fullName>
        <inlineHelpText>Provide a detailed overview of the group of people or organizations that have been selected for the survey.</inlineHelpText>
        <label>Detailed Overview of Survey Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disclaimer__c</fullName>
        <defaultValue>&quot;Thank you for reaching out to the Office of Communications and Marketing (OCM) Survey Office.  Before certain surveys can be distributed         they must be approved by this Office; this includes instances where a survey will: collect PII, have associated costs, will be distributed to more than     1,000 people, or will be sent to non-GSA employee/externally (visit our website for additional information - https://insite.gsa.gov/surveys). You do       NOT need to complete this entire form, for all requests complete the Request Information Section, then:       complete Section 1 for consultative services; complete Section 2 for training requests; or complete Section 3 for approval of a survey or approval of a fiscal year (FY) survey plan (multiple surveys     based on a specific topic of interest). Please complete this form as fully as possible. It should take less than 10 minutes.&quot;</defaultValue>
        <label>Disclaimer</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distribution_Method__c</fullName>
        <inlineHelpText>How will the survey be distributed?</inlineHelpText>
        <label>Distribution Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Responses_Include_PII__c</fullName>
        <inlineHelpText>See this page for more details about PII: http://www.gsa.gov/portal/content/104276</inlineHelpText>
        <label>Do Responses Include PII?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_This_Require_Social_Media_Only__c</fullName>
        <inlineHelpText>Please select Yes if the task doesn&apos;t need anything but social media (i.e., no press release or event; ONLY Social Media).</inlineHelpText>
        <label>Does This Require Social Media Only?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_This_Require_Social_Media__c</fullName>
        <label>Does This Require Social Media?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_This_Require_a_Communications_Plan__c</fullName>
        <label>Does This Require a Communications Plan?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <inlineHelpText>Date the task needs to be completed by.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duplicate_Identifier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the request number of the duplicate request.</inlineHelpText>
        <label>Duplicate Identifier</label>
        <referenceTo>Comms_Marketing_Service__c</referenceTo>
        <relationshipLabel>Comms &amp; Marketing Services</relationshipLabel>
        <relationshipName>Comms_Marketing_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EWM_Service_Type__c</fullName>
        <label>EWM Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EWM_Services_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Add/Remove User Account</fullName>
                </value>
                <value>
                    <fullName>API Request</fullName>
                </value>
                <value>
                    <fullName>Approve Use of Social Media Tools</fullName>
                </value>
                <value>
                    <fullName>Ask a Section 508 Question</fullName>
                </value>
                <value>
                    <fullName>Build Template</fullName>
                </value>
                <value>
                    <fullName>Category Request</fullName>
                </value>
                <value>
                    <fullName>Create/Modify Topic</fullName>
                </value>
                <value>
                    <fullName>Create Admin Account</fullName>
                </value>
                <value>
                    <fullName>Design/UI Guidance</fullName>
                </value>
                <value>
                    <fullName>Domain Name Request</fullName>
                </value>
                <value>
                    <fullName>Expert Evaluation</fullName>
                </value>
                <value>
                    <fullName>File Manager</fullName>
                </value>
                <value>
                    <fullName>Information Architecture/Navigation</fullName>
                </value>
                <value>
                    <fullName>New Content</fullName>
                </value>
                <value>
                    <fullName>Plain Language/Content Review</fullName>
                </value>
                <value>
                    <fullName>Provide Metrics</fullName>
                </value>
                <value>
                    <fullName>Report ASTO CMS Issue</fullName>
                </value>
                <value>
                    <fullName>Report Request</fullName>
                </value>
                <value>
                    <fullName>Report Website Issue</fullName>
                </value>
                <value>
                    <fullName>Request Website Feedback Survey</fullName>
                </value>
                <value>
                    <fullName>Request Website Metrics</fullName>
                </value>
                <value>
                    <fullName>Review Expiring Page</fullName>
                </value>
                <value>
                    <fullName>Schedule Training</fullName>
                </value>
                <value>
                    <fullName>Shortcut Request</fullName>
                </value>
                <value>
                    <fullName>Update Existing Content</fullName>
                </value>
                <value>
                    <fullName>Upload Video to Ooyala/Provide Embed Code</fullName>
                </value>
                <value>
                    <fullName>User Testing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EWM_Services_Requested__c</fullName>
        <inlineHelpText>If you selected Web Services please further clarify the type of service needed.</inlineHelpText>
        <label>EWM Services Requested</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Services_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>GovDelivery (Email Notifications)</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Usability/UX</fullName>
                </value>
                <value>
                    <fullName>Web Metrics</fullName>
                </value>
                <value>
                    <fullName>Website Help</fullName>
                </value>
                <value>
                    <fullName>Web Video/Multimedia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Time_to_Complete__c</fullName>
        <inlineHelpText>Enter estimated time to complete this task. Example: If it takes 1 hour 15 minutes, then 1.25 should be entered here.</inlineHelpText>
        <label>Estimated Time to Complete</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>If_Yes_Provide_a_Copy_of_the_Questions__c</fullName>
        <inlineHelpText>If you have this in a Google Doc - simply include the link to it.  Please also include a brief justification why each question is required.</inlineHelpText>
        <label>If Yes, Provide a Copy of the Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_Yes_Why_Is_It_Required__c</fullName>
        <label>If Yes, Why Is It Required?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Discussion__c</fullName>
        <inlineHelpText>Internal Discussion between OCM officials.</inlineHelpText>
        <label>Internal Discussion</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Office_Portfolio__c</fullName>
        <label>Office/Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Submitting_Org__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Office of the GSA Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AD - Office of the Deputy Administrator</fullName>
                </value>
                <value>
                    <fullName>AKE – OCR External Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKN – OCR EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKR – OCR Regional Operations Division</fullName>
                </value>
                <value>
                    <fullName>BA - OCFO Staff Offices Financial Services</fullName>
                </value>
                <value>
                    <fullName>BB - OCFO Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BC - OCFO Office of Financial Policy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>BF - OCFO Office of FAS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BI - Office of Financial Information &amp; Data Analytics</fullName>
                </value>
                <value>
                    <fullName>BP - OCFO Office of PBS Financial Services</fullName>
                </value>
                <value>
                    <fullName>CD - OHRM Office of Program Performance</fullName>
                </value>
                <value>
                    <fullName>CH - OHRM Office of Human Capital Management</fullName>
                </value>
                <value>
                    <fullName>CP - OHRM Office of Human Resources Services</fullName>
                </value>
                <value>
                    <fullName>DA - OMA Northeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DB - OMA Southeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DC - OMA Midwest Regions Division</fullName>
                </value>
                <value>
                    <fullName>DD - OMA Policy &amp; Plans Division</fullName>
                </value>
                <value>
                    <fullName>DE - OMA Western Regions Division</fullName>
                </value>
                <value>
                    <fullName>DP - OMA Operations Division</fullName>
                </value>
                <value>
                    <fullName>DS - OMA GSA Security Division</fullName>
                </value>
                <value>
                    <fullName>GA - CBCA Staff Support Division</fullName>
                </value>
                <value>
                    <fullName>GJ - CBCA Judicial Division</fullName>
                </value>
                <value>
                    <fullName>H1A - OAS Office of the Deputy CASO</fullName>
                </value>
                <value>
                    <fullName>H1B - OAS Office of Internal Acquisition, Travel, and Special Initiatives</fullName>
                </value>
                <value>
                    <fullName>H1F - OAS Office of Information Management and Workplace Services</fullName>
                </value>
                <value>
                    <fullName>IA - OCIO Office of Governmentwide and Enterprise Solutions</fullName>
                </value>
                <value>
                    <fullName>IB - OCIO Office of Financial and HR IT Services</fullName>
                </value>
                <value>
                    <fullName>IC - OCIO Office of Supply, Travel, and Transportation</fullName>
                </value>
                <value>
                    <fullName>ID - OCIO Office of the Deputy Chief Info Officer &amp; Chief Technology Officer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Agreed_Due_Date_Modification__c</fullName>
        <inlineHelpText>Please note the other reason why you modified the agreed due date.</inlineHelpText>
        <label>Other Agreed Due Date-Modification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Distribution_Method__c</fullName>
        <inlineHelpText>Please note which other type of distribution you are requesting.</inlineHelpText>
        <label>Other Distribution Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Priority__c</fullName>
        <inlineHelpText>Please note which other GSA priorities align with this survey.</inlineHelpText>
        <label>Other Priority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Services_Requested__c</fullName>
        <inlineHelpText>Please describe the type of work being requested.</inlineHelpText>
        <label>Other Services Requested</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Source__c</fullName>
        <inlineHelpText>If you selected &quot;Other&quot; in the Source of Request field, please provide information on how the request was received.</inlineHelpText>
        <label>Other Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Survey_Tool__c</fullName>
        <inlineHelpText>Please note which other type of survey tool(s) you are requesting.</inlineHelpText>
        <label>Other Survey Tool</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Consultation_or_Assistance__c</fullName>
        <inlineHelpText>Please note which other type of consultation or services you are requesting.</inlineHelpText>
        <label>Other Type of Consultation or Assistance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Type_of_Training__c</fullName>
        <inlineHelpText>Please note which other type of training you are requesting.</inlineHelpText>
        <label>Other Type of Training</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Central_ID__c</fullName>
        <inlineHelpText>This is a reference to the associated Project Central record ID; this field will only be populated when an OC&amp;M Request is converted into a project.</inlineHelpText>
        <label>Project Central ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Public_Engagement__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select this checkbox, if this request is for the &quot;Public Engagement&quot; team, so that the appropriate team will be notified of this request.</inlineHelpText>
        <label>Public Engagement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recipients_Orgs_Regions__c</fullName>
        <inlineHelpText>Please select all SSO or Regions who are the recipients of this request, or to whom this request applies.</inlineHelpText>
        <label>Recipients Org(s)/Region(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A-Ofc of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK-Ofc of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B-Ofc of the Chief Financial Ofcr</fullName>
                </value>
                <value>
                    <fullName>C-Ofc of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D-Ofc of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E-Ofc of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G-Civilan Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H-Ofc of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I-Ofc of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J-Ofc of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L-Ofc of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M-Ofc of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P-Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q-Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S-Ofc of Congressional &amp; IntergovAffairs</fullName>
                </value>
                <value>
                    <fullName>X-Ofc of Citizen Srvcs &amp; Innovative Tech</fullName>
                </value>
                <value>
                    <fullName>Z-Ofc of Communications and Marketing</fullName>
                </value>
                <value>
                    <fullName>All S/SO</fullName>
                </value>
                <value>
                    <fullName>All Regions</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>Region 11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Due_Date__c</fullName>
        <inlineHelpText>Please enter the date that you would like the request completed.</inlineHelpText>
        <label>Requested Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <inlineHelpText>For Video and Graphic Teams to further define the skills or type of task being performed.</inlineHelpText>
        <label>Service Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Services_Requested__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>508 Compliancy</fullName>
                </value>
                <value>
                    <fullName>Annual Print Blanket</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
                <value>
                    <fullName>Basic Animation (Powerpoint/InDesign)</fullName>
                </value>
                <value>
                    <fullName>Binding</fullName>
                </value>
                <value>
                    <fullName>Camera Only</fullName>
                </value>
                <value>
                    <fullName>Caption Only</fullName>
                </value>
                <value>
                    <fullName>CD/DVD Duplication</fullName>
                </value>
                <value>
                    <fullName>Collection</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Digital Reproduction</fullName>
                </value>
                <value>
                    <fullName>Drilling</fullName>
                </value>
                <value>
                    <fullName>Dry Mounting</fullName>
                </value>
                <value>
                    <fullName>Edit Only</fullName>
                </value>
                <value>
                    <fullName>Estimates</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Folding</fullName>
                </value>
                <value>
                    <fullName>Framing</fullName>
                </value>
                <value>
                    <fullName>Illustration/Chart/Infographic Creation</fullName>
                </value>
                <value>
                    <fullName>Lamination</fullName>
                </value>
                <value>
                    <fullName>Layout/Design</fullName>
                </value>
                <value>
                    <fullName>News Video</fullName>
                </value>
                <value>
                    <fullName>Output/Copying</fullName>
                </value>
                <value>
                    <fullName>Paper Stock Only</fullName>
                </value>
                <value>
                    <fullName>Photo/Image Search</fullName>
                </value>
                <value>
                    <fullName>Photo Manipulation/Restoration/Correct</fullName>
                </value>
                <value>
                    <fullName>Portrait</fullName>
                </value>
                <value>
                    <fullName>Printing/Copying</fullName>
                </value>
                <value>
                    <fullName>Training Video</fullName>
                </value>
                <value>
                    <fullName>Trimming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services_Requested__c</fullName>
        <inlineHelpText>Please select the type of work being requested.</inlineHelpText>
        <label>Services Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Briefings</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Graphics</fullName>
                </value>
                <value>
                    <fullName>Media-Affairs-Assistance</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Presentations</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Social-Media</fullName>
                </value>
                <value>
                    <fullName>Talking-Points</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Web-Services</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>